--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,10 +10,13 @@
         = yield(:head)
   %body{:class => "#{controller_name} #{action_name}"}
     #container.container
-      %header
-        = render 'layouts/navigation'
-        = render 'layouts/messages'
-      #main{:role => "main"}
-        = yield
-      %footer
+
+      = yield
+
+    /  %header
+    /    = render 'layouts/navigation'
+    /    = render 'layouts/messages'
+    /  #main{:role => "main"}
+    /    = yield
+    /  %footer
     / ! end of #container
