--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,14 +4,14 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
       %title= content_for?(:title) ? yield(:title) : "Fasady If"
       %meta{:content => content_for?(:description) ? yield(:description) : "Fasady If", :name => "description"}
+        %link{rel: 'stylesheet', href: 'http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic'}
         = stylesheet_link_tag "application", :media => "all"
         = javascript_include_tag "application"
         = csrf_meta_tags
         = yield(:head)
   %body{:class => "#{controller_name} #{action_name}"}
-    #container.container
 
-      = yield
+    = yield
 
     /  %header
     /    = render 'layouts/navigation'
