--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require normalize
+ *= require html5bp
  *= require_self
 */
 
@@ -20,7 +21,10 @@ html, body{
 
 body{
     font-family: 'Open Sans', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    color: #585d64;
     font-size: 18px;
+    background-color: green;
 }
 
 * {
@@ -34,13 +38,18 @@ body{
 .left_panel{
     width: 450px;
     height: 100%;
-    background: red;
+    background: #fff;
+    position: absolute;
+    left: 0; top: 0;
 }
     .site_header{
         height: 154px;
-        padding: 25px 20px 8px 40px;
-        background: #fff;
-        position: relative;
+        width: 100%;
+
+        position: absolute;
+        left: 0;top:0;
+
+        padding: 21px 18px 8px 38px;
     }
         .site_title{
             font-size: 36px;
@@ -62,6 +71,109 @@ body{
         .sorting_label{
             font-weight: 700;
             position: absolute;
-            bottom: 9px;
-            right: 20px;
+            bottom: 3px;
+            right: 18px;
         }
+
+    .left_panel-content_container{
+        padding: 154px 0 136px;
+        height: 100%;
+        width: 100%;
+    }
+
+        .left_panel-content{
+            height: 100%;
+            width: 100%;
+            overflow: scroll;
+            @include box-shadow(rgba(0,0,0,0.07) 0 36px 36px -36px inset, rgba(0,0,0,0.07) 0 -36px 36px -36px inset);
+        }
+
+            .objects_list{
+                list-style: none;
+                padding: 23px 20px 0px 40px;
+                margin: 0;
+            }
+
+
+                .objects_block{
+                    margin-bottom: 19px;
+                    position: relative;
+                }
+                    .letter{
+                        width: 42px;
+                        height: 42px;
+                        position: absolute;
+                        top: 0;
+                        bottom: 0;
+                        margin: auto;
+
+                        font-weight: 600;
+                        font-size: 30px;
+                        color: #74777b;
+
+
+                    }
+                    .letter_objects{
+                        display: inline-block;
+                        width: 330px;
+                        list-style: none;
+                        padding: 0;
+                        margin-left: 42px;
+                    }
+                        .object_name{
+                            line-height: 30px;
+                        }
+
+
+
+    .site_footer{
+        height: 136px;
+        width: 100%;
+
+        padding: 24px 15px 10px 41px;
+
+        position: absolute;
+        bottom: 0;left: 0;
+    }
+        .marker-desc{
+            height: 40px;
+            width: 130px;
+
+            margin-bottom: 12px;
+
+            line-height: 34px;
+            float: left;
+
+            .marker{
+                width: 24px;
+                height: 34px;
+
+                float: left;
+
+                &.green   { background: image-url('small-marker-green.png');  }
+                &.orange  { background: image-url('small-marker-orange.png'); }
+                &.yellow  { background: image-url('small-marker-yellow.png'); }
+                &.blue    { background: image-url('small-marker-blue.png');   }
+                &.purple  { background: image-url('small-marker-purple.png'); }
+
+            }
+            .desc{
+                font-size: 12px;
+                line-height: 11px;
+                padding-left: 3px;
+                display: inline-block;
+                vertical-align: bottom;
+                width: 106px;
+            }
+
+        }
+
+.right_container{
+    width: 100%;
+    height: 100%;
+    padding-left: 450px;
+}
+  #map{
+      width: 100%;
+      height: 100%;
+  }
