--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -58,3 +58,6 @@
 
 .right_container
   #map
+
+  .search_container
+    %input#search.search{type: 'text', placeholder: 'Введіть назву вулиці та будинок'}
