--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -85,7 +85,7 @@ body{
         .left_panel-content{
             height: 100%;
             width: 100%;
-            overflow: scroll;
+            overflow-y: scroll;
             @include box-shadow(rgba(0,0,0,0.07) 0 36px 36px -36px inset, rgba(0,0,0,0.07) 0 -36px 36px -36px inset);
         }
 
@@ -156,7 +156,7 @@ body{
                 float: left;
 
                 &.green   { background: image-url('small-marker-green.png');  }
-                &.orange  { background: image-url('small-marker-orange.png'); }
+                &.red     { background: image-url('small-marker-red.png'); }
                 &.yellow  { background: image-url('small-marker-yellow.png'); }
                 &.blue    { background: image-url('small-marker-blue.png');   }
                 &.purple  { background: image-url('small-marker-purple.png'); }
@@ -179,10 +179,14 @@ body{
     padding-left: 450px;
     position: relative;
 }
+
     #map{
         width: 100%;
         height: 100%;
     }
+
+
+
 
     .search_container{
         position: absolute;
@@ -231,5 +235,139 @@ body{
             margin: 0;
         }
     }
+
+
+
+
+    #add_object{
+        width: 74px;
+        height: 74px;
+        position: absolute;
+        right: 75px;
+        bottom: 65px;
+        color: #4d8ffd;
+        background: #fff;
+        font-size: 74px;
+        font-weight: 300;
+        text-align: center;
+        line-height: 74px;
+        @include border-radius(50%);
+        cursor: pointer;
+    }
+
+
+.popup_container{
+    position: absolute;
+    top: 0;left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999999;
+    display: none;
+    &.active{
+        display: block;
+    }
+}
+    .popup_bg{
+        background: #75787c;
+        @include opacity(0.8);
+        position: absolute;
+        top: 0;left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .popup{
+        position: absolute;
+        margin: auto;
+        top: 0;bottom: 0;left: 0;right: 0;
+        background: #fff;
+        padding: 30px 52px;
+    }
+    .popup_inner{
+        width: 100%;
+        height: 100%;
+    }
+
+        .popup_title{
+            font-size: 18px;
+            font-weight: 300;
+            margin: 0 0 32px 0;
+        }
+
+
+
+
+#add_object_popup{
+    .popup{
+        width: 893px;
+        height: 826px;
+        height: 630px;
+    }
+
+    .popup_input{
+        width: 362px;
+        background: #ebebeb;
+        padding: 10px 18px;
+        @include border-radius(3px);
+    }
+    .margin-right{
+        margin-right: 64px;
+    }
+
+    .popup_top_fields-label{
+        display: block;
+        font-size: 14px;
+        padding: 7px 18px 16px;
+    }
+
+    .search{
+        width: 362px;
+        position: absolute;
+        top: 210px;
+    }
+
+    .popup_add_files{
+        margin: 20px 0 10px;
+    }
+        .btn{
+            @extend .popup_input;
+            background: #4d8ffd;
+            line-height: 40px;
+            color: #fff;
+            cursor: pointer;
+        }
+        .btn-short{
+            width: 162px;
+
+        }
+
+            .add-image{
+                display: inline-block;
+
+                padding-right: 30px;
+                background-image: inline-image("add-file.png");
+                background-repeat: no-repeat;
+                background-position: right center;
+
+
+            }
+    .popup_comment{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .save_object{
+        padding-right: 30px;
+        background-image: inline-image("plus.png");
+        background-repeat: no-repeat;
+        background-position: right center;
+        float: right;
+    }
+}
+#add_object_map{
+    height: 180px;
+    width: 893px;
+    margin-left: -52px;
+    background: lightgray;
+}
 
 
