--- a/app/assets/stylesheets/dropkick.scss
+++ b/app/assets/stylesheets/dropkick.scss
@@ -83,9 +83,7 @@
         border-color: #8c8c8c;
         color: #ccc;
         box-shadow: inset 0 -2px 5px #ccc;
-        border-radius: 5px 5px 0 0;
-        -moz-border-radius: 5px 5px 0 0;
-        -webkit-border-radius: 5px 5px 0 0;
+        @include border-radius(3px 3px 0 0 );
     }
 }
 
@@ -95,9 +93,8 @@
     box-shadow: rgba(0, 0, 0, .2) 0 2px 8px;
     -moz-box-shadow: rgba(0, 0, 0, .2) 0 2px 8px;
     -webkit-box-shadow: rgba(0, 0, 0, .2) 0 2px 8px;
-    border-radius: 0 0 5px 5px;
-    -moz-border-radius: 0 0 5px 5px;
-    -webkit-border-radius: 0 0 5px 5px;
+
+    @include border-radius(0 0 3px 3px);
     a {
         background-color: #fff;
         border-bottom: 1px solid #999;
@@ -130,16 +127,12 @@
 }
 /* Inner container for options, this is what makes the scrollbar possible. */
 .dk_options_inner {
-    max-height: 250px;
-    border: 1px solid #8c8c8e;
+    max-height: 360px;
     border-bottom-width: 2px;
     border-bottom-color: #999;
     color: #333;
     text-shadow: #fff 0 1px 0;
-    border-radius: 0 0 5px 5px;
-    -moz-border-radius: 0 0 5px 5px;
-    -webkit-border-radius: 0 0 5px 5px;
-
+    @include border-radius(0 0 3px 3px);
     list-style: none;
     padding: 0;
     margin: 0;
