js refactored but not very good

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -62,7 +62,7 @@
           .btn.add-image Проект-пропозиція до об’єкта
         %input.popup_input.popup_comment{placeholder: 'Короткий опис'}>
 
-        %input#file-field{type: "file", name: "file", multiple: "true"}
+        / %input#file-field{type: "file", name: "file", multiple: "true"}
         #img-container
           %ul#img-list
 
