--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -39,41 +39,4 @@
 
     #map_object
 
-
-
-#add_object_popup.popup_container
-  .popup_bg
-  .popup
-    .popup_inner
-      %h2.popup_title Додати об’єкт
-      %form
-        .popup_top_fields
-          %input#map_object_name.popup_input.margin-right{placeholder: 'Назва об’єкта'}>
-
-          %select#category_select.popup_select
-            %option{value: "", selected: "", disabled:""} Категорія об’єкта
-
-        %label.popup_top_fields-label наприклад: Ресторан «Корівка»
-        #add_object_map
-        .popup_search_container
-          %input#popup_search.search{placeholder: 'Адреса'}
-        .popup_add_files
-          .btn.add-image.margin-right> Фото існуючого стану
-          .btn.add-image Проект-пропозиція до об’єкта
-        %input.popup_input.popup_comment{placeholder: 'Короткий опис'}>
-
-        / %input#file-field{type: "file", name: "file", multiple: "true"}
-        #img-container
-          %ul#img-list
-
-        .btn.btn-short.save_object#submit_object Додати
-
-
-#addition_success-popup.popup_container
-  .popup_bg
-  .popup
-    .popup_inner
-      %a.add_success-to_project-icon
-      %a.add_success-to_project-text перглянути проект
-      %p.add_success-description Об’єкт упішно додано! </br> Дякуємо!
-      %span.add_success-success-icon
+=render "popup_form"
