--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -37,6 +37,20 @@
     #add_object +
 
 
-    #map_object
+    #map_object.map-object
+      %header.map-object_header
+        .map-object_author
+          .map-object_author_avatar
+          .map-object_author_name Андрій Назаренко
+          .map-object_author_desc автор проекту
+        %h2.map-object_title Ресторан Фран-Ко
+        %h3.map-object_address вул. Галицька, 9a, Івано-Франківськ
+
+      .map-object_photo-section
+        -#%img
+        .map-object_left-panel
+          .map-object_button
+          .map-object_description
+          .map-object_discus
 
 =render "popup_form"
