--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -285,16 +285,51 @@ h1, h2, h3, h4, h5, h6{
             cursor: pointer;
         }
 
-        #map_object{
+
+        .map-object{
             width: 100%;
             height: 100%;
-            background: red;
-
-            //padding-top: 154px;
             margin-top: -154px;
-
             padding: 170px 26px 31px 36px;
+            background: #fff;
         }
+
+            .map-object_header{
+
+            }
+                .map-object_author{
+                    float: right;
+                    width: 300px;
+                }
+                          .map-object_author_avatar{
+                              width: 50px;
+                              height: 50px;
+                              float: left;
+                              margin-right: 10px;
+                              background: red;
+                          }
+                          .map-object_author_name{
+                              font-size: 18px;
+                              margin-top: 12px;
+                          }
+                          .map-object_author_desc{
+                              font-size: 12px;
+                          }
+                .map-object_title{
+                    font-size: 30px;
+                    margin: 0;
+                }
+                .map-object_address{
+                    font-size: 18px;
+                    margin: 0;
+                }
+
+            .map-object_photo-section
+                //%img
+                .map-object_left-panel{}
+                    .map-object_button{}
+                    .map-object_description{}
+                    .map-object_discus{}
 
 
     #about{
