--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -290,16 +290,22 @@ h1, h2, h3, h4, h5, h6{
             width: 100%;
             height: 100%;
             margin-top: -154px;
-            padding: 170px 26px 31px 36px;
+            padding: 170px 26px 30px 36px;
             background: #fff;
+            @include box-shadow(rgba(0,0,0,0.1) 43px 192px  43px -47px inset);
         }
-
+            #map_object_close{
+                position: absolute;
+                right: 27px;
+                top: 161px;
+                cursor: pointer;
+            }
             .map-object_header{
 
             }
                 .map-object_author{
                     float: right;
-                    width: 300px;
+                    width: 285px;
                 }
                           .map-object_author_avatar{
                               width: 50px;
@@ -317,15 +323,25 @@ h1, h2, h3, h4, h5, h6{
                           }
                 .map-object_title{
                     font-size: 30px;
+                    line-height: 24px;
                     margin: 0;
                 }
                 .map-object_address{
                     font-size: 18px;
-                    margin: 0;
+                    margin: 6px 0 0;
                 }
 
-            .map-object_photo-section
-                //%img
+            .map-object_photo-section{
+                height: 100%;
+                width: 100%;
+                overflow: hidden;
+                padding: 15px 0 55px;
+                text-align: center;
+            }
+                .map-object_image{
+                    max-height: 100%;
+                    width: auto;
+                }
                 .map-object_left-panel{}
                     .map-object_button{}
                     .map-object_description{}
