--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -38,16 +38,17 @@
 
 
     #map_object.map-object
+      #map_object_close x
       %header.map-object_header
         .map-object_author
-          .map-object_author_avatar
-          .map-object_author_name Андрій Назаренко
+          .map-object_author_avatar#map_object_author_avatar
+          .map-object_author_name#map_object_author_name Андрій Назаренко
           .map-object_author_desc автор проекту
-        %h2.map-object_title Ресторан Фран-Ко
-        %h3.map-object_address вул. Галицька, 9a, Івано-Франківськ
+        %h2.map-object_title#map_object_title
+        %h3.map-object_address#map_object_address
 
       .map-object_photo-section
-        -#%img
+        %img.map-object_image{src: 'assets/fasad.jpg'}
         .map-object_left-panel
           .map-object_button
           .map-object_description
