--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -295,9 +295,7 @@ h1, h2, h3, h4, h5, h6{
             @include box-shadow(rgba(0,0,0,0.1) 43px 192px  43px -47px inset);
         }
             #map_object_close{
-                position: absolute;
-                right: 27px;
-                top: 161px;
+                float: right;
                 cursor: pointer;
             }
             .map-object_header{
