--- a/app/views/home/_popup_form.haml
+++ b/app/views/home/_popup_form.haml
@@ -5,15 +5,15 @@
       %h2.popup_title Додати об’єкт
       %form#object_form{action: '/api/map_objects.json'}
         .popup_top_fields
-          %input#map_object_name.popup_input.margin-right{placeholder: 'Назва об’єкта'}>
+          %input#map_object_name.popup_input.margin-right{name:'name',placeholder: 'Назва об’єкта'}>
 
           %select#category_select.popup_select
-            %option{value: "", selected: "", disabled:""} Категорія об’єкта
+            %option{name:'category',value: "", selected: "", disabled:""} Категорія об’єкта
 
         %label.popup_top_fields-label наприклад: Ресторан «Корівка»
         #add_object_map
         .popup_search_container
-          %input#popup_search.search{placeholder: 'Адреса'}
+          %input#popup_search.search{name: 'adress',placeholder: 'Адреса'}
         .popup_add_files
           .btn.add-image.margin-right>
             Фото існуючого стану
@@ -21,7 +21,9 @@
           .btn.add-image
             Проект-пропозиція до об’єкта
             %input.add-image_input{name: 'map_object[filename]', type: 'file'}
-        %input.popup_input.popup_comment{placeholder: 'Короткий опис'}>
+          %input.lat{type:'hidden', name:'lat'}
+          %input.lng{type:'hidden', name:'lng'}
+        %input.popup_input.popup_comment{name:'desc',placeholder: 'Короткий опис'}>
 
         / %input#file-field{type: "file", name: "file", multiple: "true"}
         #img-container
