--- a/app/views/home/_popup_form.haml
+++ b/app/views/home/_popup_form.haml
@@ -13,7 +13,8 @@
         %label.popup_top_fields-label наприклад: Ресторан «Корівка»
         #add_object_map
         .popup_search_container
-          %input#popup_search.search{name: 'adress',placeholder: 'Адреса'}
+          %input#popup_search{name: 'adress',placeholder: 'Адреса'}
+          %button.search_button
         .popup_add_files
           .btn.add-image.margin-right>
             Фото існуючого стану
